--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app01">
+<!-- <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.exclusiva.app"> -->
+   <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.exclusiva.app"> 
    <application
-        android:label="app01"
+        android:label="Exclusiva da Moda"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
